# logos-module

./: .gitignore  CMakeLists.txt  README.md  flake.nix  result-lm
.github/workflows/: ci.yml  doctests.yml
cmd/: CMakeLists.txt  main.cpp
docs/: project.md  spec.md
doctests/: lm-cli.test.yaml  run.sh
doctests/outputs/: lm-cli.md
nix/: all.nix  bin.nix  default.nix  lib.nix
pr-18/: index.html
pr-18/macos-latest/: index.html
pr-18/ubuntu-latest/: index.html
src/: instance_persistence.cpp  instance_persistence.h  interface.h  logos_module.cpp  logos_module.h  logos_provider_plugin.h  module_introspection.cpp  module_introspection.h  module_lib.h  module_loader.cpp  module_loader.h  module_metadata.cpp  module_metadata.h
tests/: CMakeLists.txt  test_cli.cpp  test_instance_persistence.cpp  test_introspection.cpp  test_metadata.cpp
